# roflantodoapp

./: LICENSE.md  README.md  config.py  pyproject.toml  requirements.txt  runner.py  start
app/: __init__.py  error_handler.py  models.py  utils.py  views.py
app/static/: scripts.js  styles.css
app/templates/: index.html
