[tool.poetry]
name = "roflantodoapp"
version = "0.9.0"
description = "A simple ToDo app using Flask"
authors = ["Vladimir Blanven"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
flask = "^3.0.3"
gunicorn = "^22.0.0"
pytz = "^2024.1"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.1"
marshmallow = "^3.21.3"
marshmallow-sqlalchemy = "^1.0.0"
flask-marshmallow = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
